# bitset

./: CMakeLists.txt  README.md  bitset.hpp  bitset.impl.hpp  main.cpp
tests/: bitset_test1.cpp  bitset_test2.cpp  bitset_test3.cpp  bitset_test4.cpp  bitset_test5.cpp  bitset_test6.cpp
